Splurty complete with horizontal scroll issue

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -29,6 +29,7 @@
   font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
   font-style: italic;
   padding-top: 26px;
+  font-size: 18px;
 }
 
 .links {
@@ -54,8 +55,12 @@ hr {
 
 h1 {
   font-family: 'quicksandregular', sans-serif;
-  font-size: 42px;
+  font-size: 45px;
+}
+
+.mainquote {
   margin-left: 5%;
+  margin-right: 5%;
 }
 
 h2 {
@@ -68,15 +73,15 @@ h2 {
 
 .next-quote {
   color: #f84342;
-  font-family: 'quicksanditalic', sans-serif;
-  font-size: 20px;
+  font-family: 'quicksandbold_italic', sans-serif;
+  font-size: 15px;
 }
 
 .footer-blurb {
   font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
   font-style: italic;
   text-align: right;
-  font-size: 10px;
+  font-size: 15px;
 }
 
 .logo:hover {
